Fix calculation of gaps

--- a/src/index.css
+++ b/src/index.css
@@ -34,13 +34,13 @@ body {
   gap: var(--spacing);
 }
 .gap-2 {
-  gap: var(--spacing) * 2;
+  gap: calc(var(--spacing) * 2);
 }
 .gap-3 {
-  gap: var(--spacing) * 3;
+  gap: calc(var(--spacing) * 3);
 }
 .gap-4 {
-  gap: var(--spacing) * 4;
+  gap: calc(var(--spacing) * 4);
 }
 
 .text-center {
